templates/homechart_template.yaml
---
# Source: homechart/templates/service_homechart.yaml
apiVersion: v1
kind: Service
metadata:
  name: homechart
  labels:
    helm.sh/chart: homechart-1.0.0
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: homechart
    service: homechart
---
# Source: homechart/templates/service_postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    helm.sh/chart: homechart-1.0.0
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 5432
      targetPort: postgresql
      protocol: TCP
      name: postgresql
  selector:
    app: homechart
    service: postgresql
---
# Source: homechart/templates/deployment_homechart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homechart
  labels:
    helm.sh/chart: homechart-1.0.0
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 
  selector:
    matchLabels:
      app: homechart
      service: homechart
  template:
    metadata:
      labels:
        app: homechart
        service: homechart
    spec:
      containers:
        - name: homechart
          image: docker.io/candiddev/homechart:latest
          imagePullPolicy: 
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api
              port: http
          readinessProbe:
            httpGet:
              path: /api
              port: http
          resources:
            {}
---
# Source: homechart/templates/statefulset_postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
  labels:
    helm.sh/chart: homechart-1.0.0
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homechart
      service: postgresql
  serviceName: postgresql
  replicas: 1
  template:
    metadata:
      labels:
        app: homechart
        service: postgresql
    spec:
      containers:
        - name: postgresql
          image: docker.io/library/postgres:14
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - name: postgresql
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgresql
      spec:
        accessModes: [ReadWriteOnce]
        storageClassName: 
        resources:
          requests:
            storage: 1Gi
---
# Source: homechart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homechart
  labels:
    helm.sh/chart: homechart-1.0.0
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: 
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homechart
            port:
              number: 3000
